--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "~4.2"
   },
   "dependencies": {
+    "body-parser": "^1.15.1",
     "connect-memcached": "^0.1.0",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
