Use datastore to store forms

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "engines": {
     "node": "~4.2"
   },
+  "scripts": {
+    "start": "node --debug server.js"
+  },
   "dependencies": {
     "body-parser": "^1.15.1",
     "connect-memcached": "^0.1.0",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
-    "express-session": "^1.13.0"
+    "express-session": "^1.13.0",
+    "gcloud": "^0.36.0"
   }
 }
