--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "gcloud": "^0.36.0"
+    "gcloud": "^0.36.0",
+    "node-fetch": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
